RESOLVED FIXED98502
[WK2][GTK] WebPageAccessibilityObject leaking
https://bugs.webkit.org/show_bug.cgi?id=98502
Summary [WK2][GTK] WebPageAccessibilityObject leaking
Sudarsana Nagineni (babu)
Reported 2012-10-05 02:27:00 PDT
WebPageAccessibilityObject leaking when we open and close the MiniBrowser. ==11486== 112 (80 direct, 32 indirect) bytes in 1 blocks are definitely lost in loss record 8,480 of 9,542 ==11486== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==11486== by 0xE956A38: g_malloc (gmem.c:159) ==11486== by 0xE969C62: g_slice_alloc (gslice.c:1003) ==11486== by 0xE96A1A5: g_slice_alloc0 (gslice.c:1029) ==11486== by 0xE6EA8B9: g_type_create_instance (gtype.c:1872) ==11486== by 0xE6CF0B8: g_object_constructor (gobject.c:1849) ==11486== by 0xE6D0C01: g_object_newv (gobject.c:1632) ==11486== by 0xE6D11EB: g_object_new (gobject.c:1542) ==11486== by 0x55C8FCE: webPageAccessibilityObjectNew (WebPageAccessibilityObject.cpp:126) ==11486== by 0x55C90BB: WebKit::WebPage::platformInitialize() (WebPageGtk.cpp:55) ==11486== by 0x55DAA67: WebKit::WebPage::WebPage(unsigned long, WebKit::WebPageCreationParameters const&) (WebPage.cpp:318) ==11486== by 0x55DA17A: WebKit::WebPage::create(unsigned long, WebKit::WebPageCreationParameters const&) (WebPage.cpp:199) ==11486== by 0x55F1EF9: WebKit::WebProcess::createWebPage(unsigned long, WebKit::WebPageCreationParameters const&) (WebProcess.cpp:564)
Attachments
Patch (2.52 KB, patch)
2012-10-05 03:01 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-10-05 03:01:34 PDT
WebKit Review Bot
Comment 2 2012-10-05 04:29:57 PDT
Comment on attachment 167293 [details] Patch Clearing flags on attachment: 167293 Committed r130493: <http://trac.webkit.org/changeset/130493>
WebKit Review Bot
Comment 3 2012-10-05 04:30:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.