[WK2][GTK] WebPageAccessibilityObject leaking https://bugs.webkit.org/show_bug.cgi?id=98502

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2012-10-05
Reviewed by Carlos Garcia Campos.

Use GRefPtr on the accessibility object to fix the leak.

* WebProcess/WebPage/WebPage.h:
(WebPage):
* WebProcess/WebPage/gtk/WebPageGtk.cpp:
(WebKit::WebPage::platformInitialize):
(WebKit::WebPage::updateAccessibilityTree):

Canonical link: https://commits.webkit.org/116485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130493 268f45cc-cd09-0410-ab3c-d52691b4dbfc